# funcoes_perda_predicao_recursiva

./: README.md  estudo_neuroniosXbatchSize_treino_resample10s.ipynb  main.py  pyproject.toml
Utils/: utils.py
data/: baselines.parquet
errors_table/: errorsTable_15min_LSTM_huberLoss.xlsx  errorsTable_15min_LSTM_mae-mse-huber.xlsx  errorsTable_15min_LSTM_maeLoss.xlsx  errorsTable_15min_LSTM_mseLoss.xlsx
logs/: 15min_LSTM_16n_huberLoss_128bSize.json  15min_LSTM_16n_huberLoss_16bSize.json  15min_LSTM_16n_huberLoss_32bSize.json  15min_LSTM_16n_huberLoss_64bSize.json  15min_LSTM_16n_huberLoss_8bSize.json  15min_LSTM_16n_maeLoss_128bSize.json  15min_LSTM_16n_maeLoss_16bSize.json  15min_LSTM_16n_maeLoss_32bSize.json  15min_LSTM_16n_maeLoss_64bSize.json  15min_LSTM_16n_maeLoss_8bSize.json  15min_LSTM_16n_mseLoss_128bSize.json  15min_LSTM_16n_mseLoss_16bSize.json  15min_LSTM_16n_mseLoss_32bSize.json  15min_LSTM_16n_mseLoss_64bSize.json  15min_LSTM_16n_mseLoss_8bSize.json  15min_LSTM_24n_huberLoss_16bSize.json  15min_LSTM_24n_huberLoss_192bSize.json  15min_LSTM_24n_huberLoss_32bSize.json  15min_LSTM_24n_huberLoss_64bSize.json  15min_LSTM_24n_huberLoss_8bSize.json  15min_LSTM_24n_maeLoss_128bSize.json  15min_LSTM_24n_maeLoss_16bSize.json  15min_LSTM_24n_maeLoss_32bSize.json  15min_LSTM_24n_maeLoss_64bSize.json  15min_LSTM_24n_maeLoss_8bSize.json  15min_LSTM_24n_mseLoss_128bSize.json  15min_LSTM_24n_mseLoss_16bSize.json  15min_LSTM_24n_mseLoss_32bSize.json  15min_LSTM_24n_mseLoss_64bSize.json  15min_LSTM_24n_mseLoss_8bSize.json  15min_LSTM_32n_huberLoss_128bSize.json  (+59 more)
(+684 files in other folders)
