[project]
name = "funcoes-perda-predicao-recursiva"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "numpy==1.23",
    "openpyxl>=3.1.5",
    "pandas>=1.5.1",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "uv>=0.7.12",
]
